# yomems

./: README.md  SKILL.md  pyproject.toml
design/: admission-rules.md  agent-integration.md  architecture.md  memory-lifecycle.md  naming-conventions.md  persistence-policy.md  roadmap.md  trigger-matrix.md
examples/: project-decision.json
schemas/: memory-object.schema.json
scripts/: agent-remember.sh  agent-wake.sh  install-claude.sh  install-codex.sh  install.sh  resolve-memory-root.sh
src/yomems/: __init__.py  __main__.py  cli.py  models.py  store.py
templates/: active_task.md  identity_fact.md  investigation.md  lesson.md  project_decision.md  project_fact.md
tests/: test_install.py  test_store.py
