[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "yomems"
version = "0.1.0"
description = "Agent-agnostic structured memory system for AI agents"
readme = "README.md"
requires-python = ">=3.9"
authors = [
  { name = "OpenDev" }
]

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
